--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+  <div id="intro" style="font-size:18px; color:#aa6070; margin-top:20px;">
+  💌 <strong>Hey Cutie!</strong><br>
+  I made something just for you…<br>
+  Click <strong>Yes 💖</strong> and see what happens!<br>
+  Don’t try to click <strong>No 😶</strong> too many times… it’s tricky 😏<br>
+  Just enjoy the surprise, the confetti 🎉, and the virtual bouquet 💐<br>
+  <strong>Happy Valentine’s Day! ❤️</strong>
+</div>
 <head>
   <title>💌 My Valentine 💌</title>
   <style>
@@ -145,3 +153,4 @@
   </script>
 </body>
 </html>
+
